fix overflow

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,7 +6,7 @@
 
 body {
     width: 100vw;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 .main {
